src/perl6_curl.h

int perl6_curlopt_proxyusername ();
int perl6_curlopt_proxypassword ();
int perl6_curlopt_noproxy ();
int perl6_curlopt_tftp_blksize ();
int perl6_curlopt_socks5_gssapi_service ();
int perl6_curlopt_socks5_gssapi_nec ();
int perl6_curlopt_protocols ();
int perl6_curlopt_redir_protocols ();
int perl6_curlopt_ssh_knownhosts ();
int perl6_curlopt_ssh_keyfunction ();
int perl6_curlopt_ssh_keydata ();
int perl6_curlopt_mail_from ();
int perl6_curlopt_mail_rcpt ();
int perl6_curlopt_ftp_use_pret ();
int perl6_curlopt_rtsp_request ();
int perl6_curlopt_rtsp_session_id ();
int perl6_curlopt_rtsp_stream_uri ();
int perl6_curlopt_rtsp_transport ();
int perl6_curlopt_rtsp_client_cseq ();
int perl6_curlopt_rtsp_server_cseq ();
int perl6_curlopt_interleavedata ();
int perl6_curlopt_interleavefunction ();
int perl6_curlopt_wildcardmatch ();
int perl6_curlopt_chunk_bgn_function ();
int perl6_curlopt_chunk_end_function ();
int perl6_curlopt_fnmatch_function ();
int perl6_curlopt_chunk_data ();
int perl6_curlopt_fnmatch_data ();
int perl6_curlopt_resolve ();
int perl6_curlopt_tlsauth_username ();
int perl6_curlopt_tlsauth_password ();
int perl6_curlopt_tlsauth_type ();
int perl6_curlopt_transfer_encoding ();
int perl6_curlopt_closesocketfunction ();
int perl6_curlopt_closesocketdata ();
int perl6_curlopt_gssapi_delegation ();
int perl6_curlopt_dns_servers ();
int perl6_curlopt_accepttimeout_ms ();
int perl6_curlopt_tcp_keepalive ();
int perl6_curlopt_tcp_keepidle ();
int perl6_curlopt_tcp_keepintvl ();
int perl6_curlopt_ssl_options ();
int perl6_curlopt_mail_auth ();
int perl6_curlopt_lastentry ();
int perl6_curlinfo_none ();
int perl6_curlinfo_effective_url ();
int perl6_curlinfo_response_code ();
int perl6_curlinfo_total_time ();
int perl6_curlinfo_namelookup_time ();
int perl6_curlinfo_connect_time ();
int perl6_curlinfo_pretransfer_time ();
int perl6_curlinfo_size_upload ();
int perl6_curlinfo_size_download ();
int perl6_curlinfo_speed_download ();
int perl6_curlinfo_speed_upload ();
int perl6_curlinfo_header_size ();
int perl6_curlinfo_request_size ();
int perl6_curlinfo_ssl_verifyresult ();
int perl6_curlinfo_filetime ();
int perl6_curlinfo_content_length_download ();
int perl6_curlinfo_content_length_upload ();
int perl6_curlinfo_starttransfer_time ();
int perl6_curlinfo_content_type ();
int perl6_curlinfo_redirect_time ();
int perl6_curlinfo_redirect_count ();
int perl6_curlinfo_private ();
int perl6_curlinfo_http_connectcode ();
int perl6_curlinfo_httpauth_avail ();
int perl6_curlinfo_proxyauth_avail ();
int perl6_curlinfo_os_errno ();
int perl6_curlinfo_num_connects ();
int perl6_curlinfo_ssl_engines ();
int perl6_curlinfo_cookielist ();
int perl6_curlinfo_lastsocket ();
int perl6_curlinfo_ftp_entry_path ();
int perl6_curlinfo_redirect_url ();
int perl6_curlinfo_primary_ip ();
int perl6_curlinfo_appconnect_time ();
int perl6_curlinfo_certinfo ();
int perl6_curlinfo_condition_unmet ();
int perl6_curlinfo_rtsp_session_id ();
int perl6_curlinfo_rtsp_client_cseq ();