lib/WWW/Curl/Symbols.pm6

sub perl6_curlopt_proxyusername returns int is native('libperl6_curl') { * }
sub CURLOPT_PROXYUSERNAME is export { perl6_curlopt_proxyusername }
sub perl6_curlopt_proxypassword returns int is native('libperl6_curl') { * }
sub CURLOPT_PROXYPASSWORD is export { perl6_curlopt_proxypassword }
sub perl6_curlopt_noproxy returns int is native('libperl6_curl') { * }
sub CURLOPT_NOPROXY is export { perl6_curlopt_noproxy }
sub perl6_curlopt_tftp_blksize returns int is native('libperl6_curl') { * }
sub CURLOPT_TFTP_BLKSIZE is export { perl6_curlopt_tftp_blksize }
sub perl6_curlopt_socks5_gssapi_service returns int is native('libperl6_curl') { * }
sub CURLOPT_SOCKS5_GSSAPI_SERVICE is export { perl6_curlopt_socks5_gssapi_service }
sub perl6_curlopt_socks5_gssapi_nec returns int is native('libperl6_curl') { * }
sub CURLOPT_SOCKS5_GSSAPI_NEC is export { perl6_curlopt_socks5_gssapi_nec }
sub perl6_curlopt_protocols returns int is native('libperl6_curl') { * }
sub CURLOPT_PROTOCOLS is export { perl6_curlopt_protocols }
sub perl6_curlopt_redir_protocols returns int is native('libperl6_curl') { * }
sub CURLOPT_REDIR_PROTOCOLS is export { perl6_curlopt_redir_protocols }
sub perl6_curlopt_ssh_knownhosts returns int is native('libperl6_curl') { * }
sub CURLOPT_SSH_KNOWNHOSTS is export { perl6_curlopt_ssh_knownhosts }
sub perl6_curlopt_ssh_keyfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_SSH_KEYFUNCTION is export { perl6_curlopt_ssh_keyfunction }
sub perl6_curlopt_ssh_keydata returns int is native('libperl6_curl') { * }
sub CURLOPT_SSH_KEYDATA is export { perl6_curlopt_ssh_keydata }
sub perl6_curlopt_mail_from returns int is native('libperl6_curl') { * }
sub CURLOPT_MAIL_FROM is export { perl6_curlopt_mail_from }
sub perl6_curlopt_mail_rcpt returns int is native('libperl6_curl') { * }
sub CURLOPT_MAIL_RCPT is export { perl6_curlopt_mail_rcpt }
sub perl6_curlopt_ftp_use_pret returns int is native('libperl6_curl') { * }
sub CURLOPT_FTP_USE_PRET is export { perl6_curlopt_ftp_use_pret }
sub perl6_curlopt_rtsp_request returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_REQUEST is export { perl6_curlopt_rtsp_request }
sub perl6_curlopt_rtsp_session_id returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_SESSION_ID is export { perl6_curlopt_rtsp_session_id }
sub perl6_curlopt_rtsp_stream_uri returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_STREAM_URI is export { perl6_curlopt_rtsp_stream_uri }
sub perl6_curlopt_rtsp_transport returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_TRANSPORT is export { perl6_curlopt_rtsp_transport }
sub perl6_curlopt_rtsp_client_cseq returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_CLIENT_CSEQ is export { perl6_curlopt_rtsp_client_cseq }
sub perl6_curlopt_rtsp_server_cseq returns int is native('libperl6_curl') { * }
sub CURLOPT_RTSP_SERVER_CSEQ is export { perl6_curlopt_rtsp_server_cseq }
sub perl6_curlopt_interleavedata returns int is native('libperl6_curl') { * }
sub CURLOPT_INTERLEAVEDATA is export { perl6_curlopt_interleavedata }
sub perl6_curlopt_interleavefunction returns int is native('libperl6_curl') { * }
sub CURLOPT_INTERLEAVEFUNCTION is export { perl6_curlopt_interleavefunction }
sub perl6_curlopt_wildcardmatch returns int is native('libperl6_curl') { * }
sub CURLOPT_WILDCARDMATCH is export { perl6_curlopt_wildcardmatch }
sub perl6_curlopt_chunk_bgn_function returns int is native('libperl6_curl') { * }
sub CURLOPT_CHUNK_BGN_FUNCTION is export { perl6_curlopt_chunk_bgn_function }
sub perl6_curlopt_chunk_end_function returns int is native('libperl6_curl') { * }
sub CURLOPT_CHUNK_END_FUNCTION is export { perl6_curlopt_chunk_end_function }
sub perl6_curlopt_fnmatch_function returns int is native('libperl6_curl') { * }
sub CURLOPT_FNMATCH_FUNCTION is export { perl6_curlopt_fnmatch_function }
sub perl6_curlopt_chunk_data returns int is native('libperl6_curl') { * }
sub CURLOPT_CHUNK_DATA is export { perl6_curlopt_chunk_data }
sub perl6_curlopt_fnmatch_data returns int is native('libperl6_curl') { * }
sub CURLOPT_FNMATCH_DATA is export { perl6_curlopt_fnmatch_data }
sub perl6_curlopt_resolve returns int is native('libperl6_curl') { * }
sub CURLOPT_RESOLVE is export { perl6_curlopt_resolve }
sub perl6_curlopt_tlsauth_username returns int is native('libperl6_curl') { * }
sub CURLOPT_TLSAUTH_USERNAME is export { perl6_curlopt_tlsauth_username }
sub perl6_curlopt_tlsauth_password returns int is native('libperl6_curl') { * }
sub CURLOPT_TLSAUTH_PASSWORD is export { perl6_curlopt_tlsauth_password }
sub perl6_curlopt_tlsauth_type returns int is native('libperl6_curl') { * }
sub CURLOPT_TLSAUTH_TYPE is export { perl6_curlopt_tlsauth_type }
sub perl6_curlopt_transfer_encoding returns int is native('libperl6_curl') { * }
sub CURLOPT_TRANSFER_ENCODING is export { perl6_curlopt_transfer_encoding }
sub perl6_curlopt_closesocketfunction returns int is native('libperl6_curl') { * }
sub CURLOPT_CLOSESOCKETFUNCTION is export { perl6_curlopt_closesocketfunction }
sub perl6_curlopt_closesocketdata returns int is native('libperl6_curl') { * }
sub CURLOPT_CLOSESOCKETDATA is export { perl6_curlopt_closesocketdata }
sub perl6_curlopt_gssapi_delegation returns int is native('libperl6_curl') { * }
sub CURLOPT_GSSAPI_DELEGATION is export { perl6_curlopt_gssapi_delegation }
sub perl6_curlopt_dns_servers returns int is native('libperl6_curl') { * }
sub CURLOPT_DNS_SERVERS is export { perl6_curlopt_dns_servers }
sub perl6_curlopt_accepttimeout_ms returns int is native('libperl6_curl') { * }
sub CURLOPT_ACCEPTTIMEOUT_MS is export { perl6_curlopt_accepttimeout_ms }
sub perl6_curlopt_tcp_keepalive returns int is native('libperl6_curl') { * }
sub CURLOPT_TCP_KEEPALIVE is export { perl6_curlopt_tcp_keepalive }
sub perl6_curlopt_tcp_keepidle returns int is native('libperl6_curl') { * }
sub CURLOPT_TCP_KEEPIDLE is export { perl6_curlopt_tcp_keepidle }
sub perl6_curlopt_tcp_keepintvl returns int is native('libperl6_curl') { * }
sub CURLOPT_TCP_KEEPINTVL is export { perl6_curlopt_tcp_keepintvl }
sub perl6_curlopt_ssl_options returns int is native('libperl6_curl') { * }
sub CURLOPT_SSL_OPTIONS is export { perl6_curlopt_ssl_options }
sub perl6_curlopt_mail_auth returns int is native('libperl6_curl') { * }
sub CURLOPT_MAIL_AUTH is export { perl6_curlopt_mail_auth }
sub perl6_curlopt_lastentry returns int is native('libperl6_curl') { * }
sub CURLOPT_LASTENTRY is export { perl6_curlopt_lastentry }
sub perl6_curlinfo_none returns int is native('libperl6_curl') { * }
sub CURLINFO_NONE is export { perl6_curlinfo_none }
sub perl6_curlinfo_effective_url returns int is native('libperl6_curl') { * }
sub CURLINFO_EFFECTIVE_URL is export { perl6_curlinfo_effective_url }
sub perl6_curlinfo_response_code returns int is native('libperl6_curl') { * }
sub CURLINFO_RESPONSE_CODE is export { perl6_curlinfo_response_code }
sub perl6_curlinfo_total_time returns int is native('libperl6_curl') { * }
sub CURLINFO_TOTAL_TIME is export { perl6_curlinfo_total_time }
sub perl6_curlinfo_namelookup_time returns int is native('libperl6_curl') { * }
sub CURLINFO_NAMELOOKUP_TIME is export { perl6_curlinfo_namelookup_time }
sub perl6_curlinfo_connect_time returns int is native('libperl6_curl') { * }
sub CURLINFO_CONNECT_TIME is export { perl6_curlinfo_connect_time }
sub perl6_curlinfo_pretransfer_time returns int is native('libperl6_curl') { * }
sub CURLINFO_PRETRANSFER_TIME is export { perl6_curlinfo_pretransfer_time }
sub perl6_curlinfo_size_upload returns int is native('libperl6_curl') { * }
sub CURLINFO_SIZE_UPLOAD is export { perl6_curlinfo_size_upload }
sub perl6_curlinfo_size_download returns int is native('libperl6_curl') { * }
sub CURLINFO_SIZE_DOWNLOAD is export { perl6_curlinfo_size_download }
sub perl6_curlinfo_speed_download returns int is native('libperl6_curl') { * }
sub CURLINFO_SPEED_DOWNLOAD is export { perl6_curlinfo_speed_download }
sub perl6_curlinfo_speed_upload returns int is native('libperl6_curl') { * }
sub CURLINFO_SPEED_UPLOAD is export { perl6_curlinfo_speed_upload }
sub perl6_curlinfo_header_size returns int is native('libperl6_curl') { * }
sub CURLINFO_HEADER_SIZE is export { perl6_curlinfo_header_size }
sub perl6_curlinfo_request_size returns int is native('libperl6_curl') { * }
sub CURLINFO_REQUEST_SIZE is export { perl6_curlinfo_request_size }
sub perl6_curlinfo_ssl_verifyresult returns int is native('libperl6_curl') { * }
sub CURLINFO_SSL_VERIFYRESULT is export { perl6_curlinfo_ssl_verifyresult }
sub perl6_curlinfo_filetime returns int is native('libperl6_curl') { * }
sub CURLINFO_FILETIME is export { perl6_curlinfo_filetime }
sub perl6_curlinfo_content_length_download returns int is native('libperl6_curl') { * }
sub CURLINFO_CONTENT_LENGTH_DOWNLOAD is export { perl6_curlinfo_content_length_download }
sub perl6_curlinfo_content_length_upload returns int is native('libperl6_curl') { * }
sub CURLINFO_CONTENT_LENGTH_UPLOAD is export { perl6_curlinfo_content_length_upload }
sub perl6_curlinfo_starttransfer_time returns int is native('libperl6_curl') { * }
sub CURLINFO_STARTTRANSFER_TIME is export { perl6_curlinfo_starttransfer_time }
sub perl6_curlinfo_content_type returns int is native('libperl6_curl') { * }
sub CURLINFO_CONTENT_TYPE is export { perl6_curlinfo_content_type }
sub perl6_curlinfo_redirect_time returns int is native('libperl6_curl') { * }
sub CURLINFO_REDIRECT_TIME is export { perl6_curlinfo_redirect_time }
sub perl6_curlinfo_redirect_count returns int is native('libperl6_curl') { * }
sub CURLINFO_REDIRECT_COUNT is export { perl6_curlinfo_redirect_count }
sub perl6_curlinfo_private returns int is native('libperl6_curl') { * }
sub CURLINFO_PRIVATE is export { perl6_curlinfo_private }
sub perl6_curlinfo_http_connectcode returns int is native('libperl6_curl') { * }
sub CURLINFO_HTTP_CONNECTCODE is export { perl6_curlinfo_http_connectcode }
sub perl6_curlinfo_httpauth_avail returns int is native('libperl6_curl') { * }
sub CURLINFO_HTTPAUTH_AVAIL is export { perl6_curlinfo_httpauth_avail }
sub perl6_curlinfo_proxyauth_avail returns int is native('libperl6_curl') { * }
sub CURLINFO_PROXYAUTH_AVAIL is export { perl6_curlinfo_proxyauth_avail }
sub perl6_curlinfo_os_errno returns int is native('libperl6_curl') { * }
sub CURLINFO_OS_ERRNO is export { perl6_curlinfo_os_errno }
sub perl6_curlinfo_num_connects returns int is native('libperl6_curl') { * }
sub CURLINFO_NUM_CONNECTS is export { perl6_curlinfo_num_connects }
sub perl6_curlinfo_ssl_engines returns int is native('libperl6_curl') { * }
sub CURLINFO_SSL_ENGINES is export { perl6_curlinfo_ssl_engines }
sub perl6_curlinfo_cookielist returns int is native('libperl6_curl') { * }
sub CURLINFO_COOKIELIST is export { perl6_curlinfo_cookielist }
sub perl6_curlinfo_lastsocket returns int is native('libperl6_curl') { * }
sub CURLINFO_LASTSOCKET is export { perl6_curlinfo_lastsocket }
sub perl6_curlinfo_ftp_entry_path returns int is native('libperl6_curl') { * }
sub CURLINFO_FTP_ENTRY_PATH is export { perl6_curlinfo_ftp_entry_path }
sub perl6_curlinfo_redirect_url returns int is native('libperl6_curl') { * }
sub CURLINFO_REDIRECT_URL is export { perl6_curlinfo_redirect_url }
sub perl6_curlinfo_primary_ip returns int is native('libperl6_curl') { * }
sub CURLINFO_PRIMARY_IP is export { perl6_curlinfo_primary_ip }
sub perl6_curlinfo_appconnect_time returns int is native('libperl6_curl') { * }
sub CURLINFO_APPCONNECT_TIME is export { perl6_curlinfo_appconnect_time }
sub perl6_curlinfo_certinfo returns int is native('libperl6_curl') { * }
sub CURLINFO_CERTINFO is export { perl6_curlinfo_certinfo }
sub perl6_curlinfo_condition_unmet returns int is native('libperl6_curl') { * }
sub CURLINFO_CONDITION_UNMET is export { perl6_curlinfo_condition_unmet }
sub perl6_curlinfo_rtsp_session_id returns int is native('libperl6_curl') { * }
sub CURLINFO_RTSP_SESSION_ID is export { perl6_curlinfo_rtsp_session_id }
sub perl6_curlinfo_rtsp_client_cseq returns int is native('libperl6_curl') { * }
